Ajout d'un système de sauvegarde